[package]
name = "observe-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
reqwest = { version = "0.12.24", features = ["stream"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
zip = "6.0.0"
