[package]
name = "observe-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
indicatif = "0.18.3"
reqwest = { version = "0.12.24", features = ["stream", "blocking"] }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
sha2 = "0.10.9"
url = "2.5.7"
walkdir = "2.5.0"
zip = "6.0.0"
